--- a/dswiki/Makefile
+++ b/dswiki/Makefile
@@ -14,7 +14,7 @@ ARM7_SELECTED = ARM7_BASIC
 #ARM7_SELECTED = ARM7_MP3_DSWIFI
 #ARM7_SELECTED = ARM7_MP3_LIBLOBBY
 #ARM7_SELECTED = ARM7_MIKMOD_DSWIFI
-USE_EFS = YES
+#USE_EFS = YES
 
 PROGNAME = PAlib
 OFILES   +=
